Colaboratory를 통해 생성됨

--- a/CNN_실습.ipynb
+++ b/CNN_실습.ipynb
@@ -29,10 +29,10 @@
       "metadata": {
         "id": "bqPacsBowt7A",
         "colab_type": "code",
-        "outputId": "f59ce506-bb75-4ed0-fe56-200557d2ab1d",
+        "outputId": "d832a2aa-58b9-403e-bf6f-52e1838026b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 629
+          "height": 1000
         }
       },
       "source": [
@@ -104,64 +104,122 @@
         "model.predict(numpy.array([img_array]))\n",
         "\n",
         "\n",
-        "#!wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
-        "#!unzip -o ngrok-stable-linux-amd64.zip\n",
-        "#get_ipython().system_raw(f'tensorboard --logdir {LOG_DIR} --host 0.0.0.0 --port 6006 &')\n",
-        "#get_ipython().system_raw('./ngrok http 6006 &')\n",
-        "#! curl -s http://localhost:4040/api/tunnels | tr '\"' '\\n' | grep \"https://\""
+        "!wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
+        "!unzip -o ngrok-stable-linux-amd64.zip\n",
+        "get_ipython().system_raw(f'tensorboard --logdir {LOG_DIR} --host 0.0.0.0 --port 6006 &')\n",
+        "get_ipython().system_raw('./ngrok http 6006 &')\n",
+        "! curl -s http://localhost:4040/api/tunnels | tr '\"' '\\n' | grep \"https://\""
       ],
-      "execution_count": 9,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Using TensorFlow backend.\n",
+            "WARNING: Logging before flag parsing goes to stderr.\n",
+            "W0704 06:37:43.695105 140511775905664 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+            "\n",
+            "W0704 06:37:43.738786 140511775905664 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+            "\n",
+            "W0704 06:37:43.745626 140511775905664 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
             "Found 2000 images belonging to 2 classes.\n",
-            "Found 800 images belonging to 2 classes.\n",
-            "_________________________________________________________________\n",
-            "Layer (type)                 Output Shape              Param #   \n",
-            "=================================================================\n",
-            "conv2d_17 (Conv2D)           (None, 96, 96, 32)        2432      \n",
-            "_________________________________________________________________\n",
-            "max_pooling2d_17 (MaxPooling (None, 48, 48, 32)        0         \n",
-            "_________________________________________________________________\n",
-            "conv2d_18 (Conv2D)           (None, 46, 46, 32)        9248      \n",
-            "_________________________________________________________________\n",
-            "max_pooling2d_18 (MaxPooling (None, 23, 23, 32)        0         \n",
-            "_________________________________________________________________\n",
-            "flatten_9 (Flatten)          (None, 16928)             0         \n",
-            "_________________________________________________________________\n",
-            "dropout_9 (Dropout)          (None, 16928)             0         \n",
-            "_________________________________________________________________\n",
-            "dense_9 (Dense)              (None, 1)                 16929     \n",
-            "=================================================================\n",
-            "Total params: 28,609\n",
-            "Trainable params: 28,609\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n",
-            "Epoch 1/5\n",
-            "10/10 [==============================] - 9s 859ms/step - loss: 0.7227 - acc: 0.5281 - val_loss: 0.5363 - val_acc: 1.0000\n",
-            "Epoch 2/5\n",
-            "10/10 [==============================] - 6s 610ms/step - loss: 0.7010 - acc: 0.5187 - val_loss: 0.6706 - val_acc: 0.6375\n",
-            "Epoch 3/5\n",
-            "10/10 [==============================] - 6s 629ms/step - loss: 0.7479 - acc: 0.4594 - val_loss: 0.6835 - val_acc: 0.5875\n",
-            "Epoch 4/5\n",
-            "10/10 [==============================] - 6s 627ms/step - loss: 0.6974 - acc: 0.4875 - val_loss: 0.6434 - val_acc: 0.8938\n",
-            "Epoch 5/5\n",
-            "10/10 [==============================] - 6s 619ms/step - loss: 0.6932 - acc: 0.5531 - val_loss: 0.6564 - val_acc: 0.8187\n"
+            "Found 800 images belonging to 2 classes.\n"
           ],
           "name": "stdout"
         },
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0.4958537]], dtype=float32)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
+          "output_type": "stream",
+          "text": [
+            "W0704 06:37:43.793528 140511775905664 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+            "\n",
+            "W0704 06:37:43.826372 140511775905664 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:133: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
+            "\n",
+            "W0704 06:37:43.838260 140511775905664 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
+            "W0704 06:37:43.887930 140511775905664 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+            "\n",
+            "W0704 06:37:43.895119 140511775905664 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3376: The name tf.log is deprecated. Please use tf.math.log instead.\n",
+            "\n",
+            "W0704 06:37:43.905323 140511775905664 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/nn_impl.py:180: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "conv2d_1 (Conv2D)            (None, 96, 96, 32)        2432      \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_1 (MaxPooling2 (None, 48, 48, 32)        0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_2 (Conv2D)            (None, 46, 46, 32)        9248      \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_2 (MaxPooling2 (None, 23, 23, 32)        0         \n",
+            "_________________________________________________________________\n",
+            "flatten_1 (Flatten)          (None, 16928)             0         \n",
+            "_________________________________________________________________\n",
+            "dropout_1 (Dropout)          (None, 16928)             0         \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 1)                 16929     \n",
+            "=================================================================\n",
+            "Total params: 28,609\n",
+            "Trainable params: 28,609\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "W0704 06:37:47.835361 140511775905664 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/callbacks.py:850: The name tf.summary.merge_all is deprecated. Please use tf.compat.v1.summary.merge_all instead.\n",
+            "\n",
+            "W0704 06:37:47.836921 140511775905664 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/callbacks.py:853: The name tf.summary.FileWriter is deprecated. Please use tf.compat.v1.summary.FileWriter instead.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/5\n",
+            "10/10 [==============================] - 8s 829ms/step - loss: 0.7881 - acc: 0.4813 - val_loss: 0.5877 - val_acc: 0.9313\n",
+            "Epoch 2/5\n",
+            "10/10 [==============================] - 6s 581ms/step - loss: 0.7205 - acc: 0.5438 - val_loss: 1.1116 - val_acc: 0.0000e+00\n",
+            "Epoch 3/5\n",
+            "10/10 [==============================] - 6s 586ms/step - loss: 0.7049 - acc: 0.5344 - val_loss: 0.6907 - val_acc: 0.5062\n",
+            "Epoch 4/5\n",
+            "10/10 [==============================] - 6s 579ms/step - loss: 0.6908 - acc: 0.5250 - val_loss: 0.6151 - val_acc: 1.0000\n",
+            "Epoch 5/5\n",
+            "10/10 [==============================] - 6s 580ms/step - loss: 0.6944 - acc: 0.5156 - val_loss: 0.7804 - val_acc: 0.0312\n",
+            "--2019-07-04 06:38:20--  https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
+            "Resolving bin.equinox.io (bin.equinox.io)... 52.71.139.107, 52.203.53.176, 54.165.51.142, ...\n",
+            "Connecting to bin.equinox.io (bin.equinox.io)|52.71.139.107|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 17556757 (17M) [application/octet-stream]\n",
+            "Saving to: ‘ngrok-stable-linux-amd64.zip’\n",
+            "\n",
+            "ngrok-stable-linux- 100%[===================>]  16.74M  19.1MB/s    in 0.9s    \n",
+            "\n",
+            "2019-07-04 06:38:21 (19.1 MB/s) - ‘ngrok-stable-linux-amd64.zip’ saved [17556757/17556757]\n",
+            "\n",
+            "Archive:  ngrok-stable-linux-amd64.zip\n",
+            "  inflating: ngrok                   \n",
+            "https://df8c1f2e.ngrok.io\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
