--- a/image_지도학습.ipynb
+++ b/image_지도학습.ipynb
@@ -81,10 +81,10 @@
       "metadata": {
         "id": "FfRPOVHrkGWL",
         "colab_type": "code",
-        "outputId": "fa481996-5861-4515-9d94-7ca94554299b",
+        "outputId": "3ba140b5-7005-4219-a7ed-3ac52ef1494c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 775
+          "height": 1000
         }
       },
       "source": [
@@ -198,32 +198,30 @@
         "#plt.imshow(mark_boundaries(temp, mask))\n",
         "\n",
         "\n",
-        "#from keras.callbacks import TensorBoard\n",
-        "#LOG_DIR = 'log_model'\n",
-        "#model.fit_generator(\n",
-        "#    train, validation_data=valid, steps_per_epoch=10, validation_steps=5,epochs=5,\n",
-        "#    callbacks=[\n",
-        "#        TensorBoard(log_dir=LOG_DIR)\n",
-        "#    ])\n",
+        "from keras.callbacks import TensorBoard\n",
+        "LOG_DIR = 'log_model'\n",
+        "model.fit_generator(\n",
+        "    train, validation_data=valid, steps_per_epoch=10, validation_steps=5,epochs=5,\n",
+        "    callbacks=[\n",
+        "        TensorBoard(log_dir=LOG_DIR)\n",
+        "    ])\n",
         "\n",
-        "#!wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
-        "#!unzip -o ngrok-stable-linux-amd64.zip\n",
-        "#get_ipython().system_raw(f'tensorboard --logdir {LOG_DIR} --host 0.0.0.0 --port 6006 &')\n",
-        "#get_ipython().system_raw('./ngrok http 6006 &')\n",
-        "#! curl -s http://localhost:4040/api/tunnels | tr '\"' '\\n' | grep \"https://\""
+        "!wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
+        "!unzip -o ngrok-stable-linux-amd64.zip\n",
+        "get_ipython().system_raw(f'tensorboard --logdir {LOG_DIR} --host 0.0.0.0 --port 6006 &')\n",
+        "get_ipython().system_raw('./ngrok http 6006 &')\n",
+        "! curl -s http://localhost:4040/api/tunnels | tr '\"' '\\n' | grep \"https://\""
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Using TensorFlow backend.\n",
             "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0703 12:45:51.278701 140080615823232 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+            "W0704 06:40:31.740533 140576647862144 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
             "\n",
-            "W0703 12:45:51.297153 140080615823232 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
-            "\n",
-            "W0703 12:45:51.310938 140080615823232 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+            "W0704 06:40:31.779871 140576647862144 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
             "\n"
           ],
           "name": "stderr"
@@ -232,7 +230,28 @@
           "output_type": "stream",
           "text": [
             "Found 2000 images belonging to 2 classes.\n",
-            "Found 800 images belonging to 2 classes.\n",
+            "Found 800 images belonging to 2 classes.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "W0704 06:40:31.810895 140576647862144 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+            "\n",
+            "W0704 06:40:31.846277 140576647862144 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+            "\n",
+            "W0704 06:40:31.854990 140576647862144 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3376: The name tf.log is deprecated. Please use tf.math.log instead.\n",
+            "\n",
+            "W0704 06:40:31.863037 140576647862144 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/nn_impl.py:180: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
@@ -250,14 +269,7 @@
         {
           "output_type": "stream",
           "text": [
-            "W0703 12:45:51.349066 140080615823232 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
-            "\n",
-            "W0703 12:45:51.356267 140080615823232 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3376: The name tf.log is deprecated. Please use tf.math.log instead.\n",
-            "\n",
-            "W0703 12:45:51.362797 140080615823232 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/nn_impl.py:180: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-            "W0703 12:45:51.545650 140080615823232 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:986: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
+            "W0704 06:40:32.086153 140576647862144 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:986: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
             "\n"
           ],
           "name": "stderr"
@@ -266,29 +278,57 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/5\n",
-            "10/10 [==============================] - 3s 266ms/step - loss: 2.3366 - acc: 0.4313 - val_loss: 1.0629 - val_acc: 0.0938\n",
+            "10/10 [==============================] - 3s 255ms/step - loss: 2.1920 - acc: 0.5156 - val_loss: 0.8983 - val_acc: 0.3375\n",
             "Epoch 2/5\n",
-            "10/10 [==============================] - 2s 196ms/step - loss: 1.0198 - acc: 0.5906 - val_loss: 1.3020 - val_acc: 0.0625\n",
+            "10/10 [==============================] - 2s 191ms/step - loss: 1.4890 - acc: 0.4969 - val_loss: 3.3472 - val_acc: 0.0000e+00\n",
             "Epoch 3/5\n",
-            "10/10 [==============================] - 2s 194ms/step - loss: 0.7989 - acc: 0.5000 - val_loss: 0.7249 - val_acc: 0.5375\n",
+            "10/10 [==============================] - 2s 198ms/step - loss: 1.0515 - acc: 0.5125 - val_loss: 0.9524 - val_acc: 0.4875\n",
             "Epoch 4/5\n",
-            "10/10 [==============================] - 2s 198ms/step - loss: 0.7379 - acc: 0.5687 - val_loss: 0.5060 - val_acc: 0.8125\n",
+            "10/10 [==============================] - 2s 201ms/step - loss: 0.9014 - acc: 0.5250 - val_loss: 0.2808 - val_acc: 0.9750\n",
             "Epoch 5/5\n",
-            "10/10 [==============================] - 2s 195ms/step - loss: 0.7560 - acc: 0.5031 - val_loss: 1.0302 - val_acc: 0.1938\n"
+            "10/10 [==============================] - 2s 195ms/step - loss: 0.7969 - acc: 0.5094 - val_loss: 0.5953 - val_acc: 0.7000\n"
           ],
           "name": "stdout"
         },
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0.17140187]], dtype=float32)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 2
+          "output_type": "stream",
+          "text": [
+            "W0704 06:40:45.400949 140576647862144 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/callbacks.py:850: The name tf.summary.merge_all is deprecated. Please use tf.compat.v1.summary.merge_all instead.\n",
+            "\n",
+            "W0704 06:40:45.402382 140576647862144 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/callbacks.py:853: The name tf.summary.FileWriter is deprecated. Please use tf.compat.v1.summary.FileWriter instead.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/5\n",
+            "10/10 [==============================] - 2s 230ms/step - loss: 0.7359 - acc: 0.5031 - val_loss: 0.4279 - val_acc: 0.9125\n",
+            "Epoch 2/5\n",
+            "10/10 [==============================] - 2s 185ms/step - loss: 0.8168 - acc: 0.5434 - val_loss: 0.4111 - val_acc: 0.8750\n",
+            "Epoch 3/5\n",
+            "10/10 [==============================] - 2s 195ms/step - loss: 0.8470 - acc: 0.5250 - val_loss: 1.1275 - val_acc: 0.1437\n",
+            "Epoch 4/5\n",
+            "10/10 [==============================] - 2s 192ms/step - loss: 0.7852 - acc: 0.4750 - val_loss: 0.7490 - val_acc: 0.4938\n",
+            "Epoch 5/5\n",
+            "10/10 [==============================] - 2s 192ms/step - loss: 0.8030 - acc: 0.4844 - val_loss: 0.6877 - val_acc: 0.5687\n",
+            "--2019-07-04 06:40:56--  https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
+            "Resolving bin.equinox.io (bin.equinox.io)... 52.22.145.207, 52.86.186.182, 52.21.103.149, ...\n",
+            "Connecting to bin.equinox.io (bin.equinox.io)|52.22.145.207|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 17556757 (17M) [application/octet-stream]\n",
+            "Saving to: ‘ngrok-stable-linux-amd64.zip’\n",
+            "\n",
+            "ngrok-stable-linux- 100%[===================>]  16.74M  91.3MB/s    in 0.2s    \n",
+            "\n",
+            "2019-07-04 06:40:56 (91.3 MB/s) - ‘ngrok-stable-linux-amd64.zip’ saved [17556757/17556757]\n",
+            "\n",
+            "Archive:  ngrok-stable-linux-amd64.zip\n",
+            "  inflating: ngrok                   \n",
+            "https://3a90ed2d.ngrok.io\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
