Colaboratory를 통해 생성됨

--- a/CNN_실습_ipynb.ipynb
+++ b/CNN_실습_ipynb.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "CNN_실습.ipynb의 사본의 사본의 사본의 사본의 사본의 사본",
+      "name": "CNN_실습.ipynb의 사본의 사본의 사본의 사본의 사본의 사본의 사본의 사본",
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
@@ -98,7 +98,7 @@
         "    ])\n",
         "\n",
         "from keras.preprocessing.image import load_img \n",
-        "img = load_img('/gdrive/My Drive/Colab Notebooks/normal/file10.jpeg', target_size=(3640, 2430))\n",
+        "img = load_img('/gdrive/My Drive/Colab Notebooks/cancer/file10.jpeg', target_size=(2100, 2100))\n",
         "import numpy\n",
         "img_array = numpy.array(img) / 255\n",
         "img_array.shape\n",
