Colaboratory를 통해 생성됨

--- a/class.ipynb
+++ b/class.ipynb
@@ -48,7 +48,7 @@
         "train_datagen = ImageDataGenerator(rescale=1./255)\n",
         "\n",
         "train_generator = train_datagen.flow_from_directory(\n",
-        "        'warehouse/handwriting_shape/train',\n",
+        "        '/gdrive/My Drive/Colab Notebooks/train',\n",
         "        target_size=(24, 24),\n",
         "        batch_size=3,\n",
         "        class_mode='categorical')\n",
