--- a/class.ipynb
+++ b/class.ipynb
@@ -31,10 +31,10 @@
       "metadata": {
         "id": "S3VpWsY3c36k",
         "colab_type": "code",
-        "outputId": "607497b9-0071-466e-d5a4-11d46e91fb39",
+        "outputId": "98f7430d-3e30-4586-c3e7-86785a018548",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 763
         }
       },
       "source": [
@@ -54,7 +54,17 @@
         "\n",
         "from google.colab import drive\n",
         "drive.mount('/gdrive', force_remount=True)\n",
-        "train_datagen = ImageDataGenerator(rescale=1./255)\n",
+        "train_datagen = ImageDataGenerator(\n",
+        "        rescale=1./255,         # 픽셀 값을 0~1 범위로 변환\n",
+        "        rotation_range=15,      # 15도까지 회전\n",
+        "        width_shift_range=0.1,  # 10%까지 좌우 이동\n",
+        "        height_shift_range=0.1, # 10%까지 상하 이동\n",
+        "        shear_range=0.5,        # 50%까지 기울임\n",
+        "        zoom_range=[0.8,2.0],         # 20%까지 확대\n",
+        "        horizontal_flip=True,   # 좌우 뒤집기\n",
+        "        vertical_flip=True,\n",
+        "       fill_mode='nearest')\n",
+        "    \n",
         "\n",
         "train_generator = train_datagen.flow_from_directory(\n",
         "        '/gdrive/My Drive/Colab Notebooks/train',\n",
@@ -68,8 +78,7 @@
         "        '/gdrive/My Drive/Colab Notebooks/test',\n",
         "        target_size=(70, 70),    \n",
         "        batch_size=3,\n",
-        "    \n",
-        "        class_mode='categorical')\n",
+        "       class_mode='categorical')\n",
         "\n",
         "# 2. 모델 구성하기\n",
         "model = Sequential()\n",
@@ -88,8 +97,8 @@
         "# 4. 모델 학습시키기\n",
         "model.fit_generator(\n",
         "        train_generator,\n",
-        "        steps_per_epoch=15,\n",
-        "        epochs=50,\n",
+        "        steps_per_epoch=15 * 100,\n",
+        "        epochs=200,\n",
         "        validation_data=test_generator,\n",
         "        validation_steps=5)\n",
         "\n",
@@ -105,170 +114,52 @@
         "print(test_generator.class_indices)\n",
         "print(output)"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "stream",
           "text": [
             "Mounted at /gdrive\n",
             "Found 70 images belonging to 3 classes.\n",
-            "Found 12 images belonging to 3 classes.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0829 06:31:18.435915 139931002976128 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
-            "\n",
-            "W0829 06:31:18.483536 139931002976128 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
-            "\n",
-            "W0829 06:31:18.492021 139931002976128 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
-            "\n",
-            "W0829 06:31:18.556765 139931002976128 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
-            "\n",
-            "W0829 06:31:18.600858 139931002976128 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
-            "\n",
-            "W0829 06:31:18.625585 139931002976128 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3295: The name tf.log is deprecated. Please use tf.math.log instead.\n",
-            "\n",
-            "W0829 06:31:18.767143 139931002976128 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/math_grad.py:1250: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-            "W0829 06:31:18.836317 139931002976128 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:986: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
-            "\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Epoch 1/50\n",
-            "15/15 [==============================] - 26s 2s/step - loss: 7.2424 - acc: 0.5111 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 2/50\n",
-            "15/15 [==============================] - 15s 986ms/step - loss: 7.8560 - acc: 0.5126 - val_loss: 8.5963 - val_acc: 0.4667\n",
-            "Epoch 3/50\n",
-            "15/15 [==============================] - 2s 132ms/step - loss: 8.5963 - acc: 0.4667 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 4/50\n",
-            "15/15 [==============================] - 2s 122ms/step - loss: 7.8560 - acc: 0.5126 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 5/50\n",
-            "15/15 [==============================] - 2s 126ms/step - loss: 7.5436 - acc: 0.5320 - val_loss: 7.5218 - val_acc: 0.5333\n",
-            "Epoch 6/50\n",
-            "15/15 [==============================] - 2s 125ms/step - loss: 8.5963 - acc: 0.4667 - val_loss: 11.8199 - val_acc: 0.2667\n",
-            "Epoch 7/50\n",
-            "15/15 [==============================] - 2s 125ms/step - loss: 6.4660 - acc: 0.5988 - val_loss: 8.5963 - val_acc: 0.4667\n",
-            "Epoch 8/50\n",
-            "15/15 [==============================] - 2s 123ms/step - loss: 8.5745 - acc: 0.4680 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 9/50\n",
-            "15/15 [==============================] - 2s 125ms/step - loss: 8.5963 - acc: 0.4667 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 10/50\n",
-            "15/15 [==============================] - 2s 122ms/step - loss: 6.7783 - acc: 0.5795 - val_loss: 8.5963 - val_acc: 0.4667\n",
-            "Epoch 11/50\n",
-            "15/15 [==============================] - 2s 125ms/step - loss: 7.8800 - acc: 0.5111 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 12/50\n",
-            "15/15 [==============================] - 2s 122ms/step - loss: 8.5745 - acc: 0.4680 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 13/50\n",
-            "15/15 [==============================] - 2s 124ms/step - loss: 8.5745 - acc: 0.4680 - val_loss: 8.5963 - val_acc: 0.4667\n",
-            "Epoch 14/50\n",
-            "15/15 [==============================] - 2s 127ms/step - loss: 7.1636 - acc: 0.5556 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 15/50\n",
-            "15/15 [==============================] - 2s 123ms/step - loss: 6.8252 - acc: 0.5766 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 16/50\n",
-            "15/15 [==============================] - 2s 126ms/step - loss: 9.2929 - acc: 0.4234 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 17/50\n",
-            "15/15 [==============================] - 2s 124ms/step - loss: 7.1636 - acc: 0.5556 - val_loss: 10.7454 - val_acc: 0.3333\n",
-            "Epoch 18/50\n",
-            "15/15 [==============================] - 2s 124ms/step - loss: 8.5745 - acc: 0.4680 - val_loss: 8.5963 - val_acc: 0.4667\n",
-            "Epoch 19/50\n",
-            "15/15 [==============================] - 2s 126ms/step - loss: 7.8800 - acc: 0.5111 - val_loss: 8.5963 - val_acc: 0.4667\n",
-            "Epoch 20/50\n",
-            "15/15 [==============================] - 2s 128ms/step - loss: 8.5745 - acc: 0.4680 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 21/50\n",
-            "15/15 [==============================] - 2s 125ms/step - loss: 7.5436 - acc: 0.5320 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 22/50\n",
-            "15/15 [==============================] - 2s 125ms/step - loss: 8.2381 - acc: 0.4889 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 23/50\n",
-            "15/15 [==============================] - 2s 125ms/step - loss: 8.2152 - acc: 0.4903 - val_loss: 8.5963 - val_acc: 0.4667\n",
-            "Epoch 24/50\n",
-            "15/15 [==============================] - 2s 123ms/step - loss: 6.8252 - acc: 0.5766 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 25/50\n",
-            "15/15 [==============================] - 2s 125ms/step - loss: 8.2381 - acc: 0.4889 - val_loss: 7.5218 - val_acc: 0.5333\n",
-            "Epoch 26/50\n",
-            "15/15 [==============================] - 2s 123ms/step - loss: 7.1376 - acc: 0.5572 - val_loss: 11.8199 - val_acc: 0.2667\n",
-            "Epoch 27/50\n",
-            "15/15 [==============================] - 2s 126ms/step - loss: 8.2381 - acc: 0.4889 - val_loss: 10.7454 - val_acc: 0.3333\n",
-            "Epoch 28/50\n",
-            "15/15 [==============================] - 2s 121ms/step - loss: 8.2621 - acc: 0.4874 - val_loss: 7.5218 - val_acc: 0.5333\n",
-            "Epoch 29/50\n",
-            "15/15 [==============================] - 2s 122ms/step - loss: 6.8252 - acc: 0.5766 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 30/50\n",
-            "15/15 [==============================] - 2s 126ms/step - loss: 7.8800 - acc: 0.5111 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 31/50\n",
-            "15/15 [==============================] - 2s 126ms/step - loss: 8.9337 - acc: 0.4457 - val_loss: 7.5218 - val_acc: 0.5333\n",
-            "Epoch 32/50\n",
-            "15/15 [==============================] - 2s 125ms/step - loss: 7.4968 - acc: 0.5349 - val_loss: 10.7454 - val_acc: 0.3333\n",
-            "Epoch 33/50\n",
-            "15/15 [==============================] - 2s 122ms/step - loss: 7.5218 - acc: 0.5333 - val_loss: 10.7454 - val_acc: 0.3333\n",
-            "Epoch 34/50\n",
-            "15/15 [==============================] - 2s 125ms/step - loss: 8.5745 - acc: 0.4680 - val_loss: 7.5218 - val_acc: 0.5333\n",
-            "Epoch 35/50\n",
-            "15/15 [==============================] - 2s 126ms/step - loss: 7.8800 - acc: 0.5111 - val_loss: 8.5963 - val_acc: 0.4667\n",
-            "Epoch 36/50\n",
-            "15/15 [==============================] - 2s 123ms/step - loss: 5.7475 - acc: 0.6434 - val_loss: 10.7454 - val_acc: 0.3333\n",
-            "Epoch 37/50\n",
-            "15/15 [==============================] - 2s 124ms/step - loss: 9.3397 - acc: 0.4205 - val_loss: 10.7454 - val_acc: 0.3333\n",
-            "Epoch 38/50\n",
-            "15/15 [==============================] - 2s 127ms/step - loss: 8.2381 - acc: 0.4889 - val_loss: 7.5218 - val_acc: 0.5333\n",
-            "Epoch 39/50\n",
-            "15/15 [==============================] - 2s 125ms/step - loss: 7.5436 - acc: 0.5320 - val_loss: 8.5963 - val_acc: 0.4667\n",
-            "Epoch 40/50\n",
-            "15/15 [==============================] - 2s 127ms/step - loss: 7.4968 - acc: 0.5349 - val_loss: 10.7454 - val_acc: 0.3333\n",
-            "Epoch 41/50\n",
-            "15/15 [==============================] - 2s 128ms/step - loss: 7.8800 - acc: 0.5111 - val_loss: 10.7454 - val_acc: 0.3333\n",
-            "Epoch 42/50\n",
-            "15/15 [==============================] - 2s 124ms/step - loss: 6.8252 - acc: 0.5766 - val_loss: 8.5963 - val_acc: 0.4667\n",
-            "Epoch 43/50\n",
-            "15/15 [==============================] - 2s 125ms/step - loss: 8.9545 - acc: 0.4444 - val_loss: 8.5963 - val_acc: 0.4667\n",
-            "Epoch 44/50\n",
-            "15/15 [==============================] - 2s 120ms/step - loss: 7.1844 - acc: 0.5543 - val_loss: 9.6709 - val_acc: 0.4000\n",
-            "Epoch 45/50\n",
-            "15/15 [==============================] - 2s 125ms/step - loss: 7.5436 - acc: 0.5320 - val_loss: 8.5963 - val_acc: 0.4667\n",
-            "Epoch 46/50\n",
-            "15/15 [==============================] - 2s 126ms/step - loss: 7.8800 - acc: 0.5111 - val_loss: 11.8199 - val_acc: 0.2667\n",
-            "Epoch 47/50\n",
-            "15/15 [==============================] - 2s 126ms/step - loss: 8.2152 - acc: 0.4903 - val_loss: 8.5963 - val_acc: 0.4667\n",
-            "Epoch 48/50\n",
-            "15/15 [==============================] - 2s 123ms/step - loss: 7.8560 - acc: 0.5126 - val_loss: 8.5963 - val_acc: 0.4667\n",
-            "Epoch 49/50\n",
-            "15/15 [==============================] - 2s 126ms/step - loss: 8.5963 - acc: 0.4667 - val_loss: 10.7454 - val_acc: 0.3333\n",
-            "Epoch 50/50\n",
-            "15/15 [==============================] - 2s 124ms/step - loss: 6.1068 - acc: 0.6211 - val_loss: 8.5963 - val_acc: 0.4667\n",
-            "-- Evaluate --\n",
-            "acc: 33.33%\n",
-            "-- Predict --\n",
-            "{'cancer': 0, 'etc': 1, 'normal': 2}\n",
-            "[[0.000 0.000 1.000]\n",
-            " [0.000 0.000 1.000]\n",
-            " [0.000 0.000 1.000]\n",
-            " [0.000 0.000 1.000]\n",
-            " [0.000 0.000 1.000]\n",
-            " [0.000 0.000 1.000]\n",
-            " [0.000 0.000 1.000]\n",
-            " [0.000 0.000 1.000]\n",
-            " [0.000 0.000 1.000]\n",
-            " [0.000 0.000 1.000]\n",
-            " [0.000 0.000 1.000]\n",
-            " [0.000 0.000 1.000]\n",
-            " [0.000 0.000 1.000]\n",
-            " [0.000 0.000 1.000]\n",
-            " [0.000 0.000 1.000]]\n"
+            "Found 12 images belonging to 3 classes.\n",
+            "Epoch 1/200\n",
+            "1500/1500 [==============================] - 173s 116ms/step - loss: 7.8843 - acc: 0.5104 - val_loss: 9.6709 - val_acc: 0.4000\n",
+            "Epoch 2/200\n",
+            "1500/1500 [==============================] - 174s 116ms/step - loss: 7.8226 - acc: 0.5147 - val_loss: 8.5963 - val_acc: 0.4667\n",
+            "Epoch 3/200\n",
+            "1500/1500 [==============================] - 176s 117ms/step - loss: 7.8549 - acc: 0.5127 - val_loss: 10.7454 - val_acc: 0.3333\n",
+            "Epoch 4/200\n",
+            "1500/1500 [==============================] - 176s 117ms/step - loss: 7.8549 - acc: 0.5127 - val_loss: 8.5963 - val_acc: 0.4667\n",
+            "Epoch 5/200\n",
+            "1500/1500 [==============================] - 175s 117ms/step - loss: 7.7833 - acc: 0.5171 - val_loss: 8.5963 - val_acc: 0.4667\n",
+            "Epoch 6/200\n",
+            "1500/1500 [==============================] - 175s 117ms/step - loss: 7.8262 - acc: 0.5144 - val_loss: 10.7454 - val_acc: 0.3333\n",
+            "Epoch 7/200\n",
+            "1500/1500 [==============================] - 176s 117ms/step - loss: 7.8155 - acc: 0.5151 - val_loss: 9.6709 - val_acc: 0.4000\n",
+            "Epoch 8/200\n",
+            "1500/1500 [==============================] - 175s 117ms/step - loss: 7.8656 - acc: 0.5120 - val_loss: 8.5963 - val_acc: 0.4667\n",
+            "Epoch 9/200\n",
+            "1500/1500 [==============================] - 175s 117ms/step - loss: 7.8728 - acc: 0.5116 - val_loss: 9.6709 - val_acc: 0.4000\n",
+            "Epoch 10/200\n",
+            "1500/1500 [==============================] - 175s 117ms/step - loss: 7.8584 - acc: 0.5124 - val_loss: 9.6709 - val_acc: 0.4000\n",
+            "Epoch 11/200\n",
+            "1500/1500 [==============================] - 175s 117ms/step - loss: 7.8262 - acc: 0.5144 - val_loss: 8.5963 - val_acc: 0.4667\n",
+            "Epoch 12/200\n",
+            "1500/1500 [==============================] - 175s 117ms/step - loss: 7.8048 - acc: 0.5158 - val_loss: 9.6709 - val_acc: 0.4000\n",
+            "Epoch 13/200\n",
+            "1500/1500 [==============================] - 176s 117ms/step - loss: 7.8370 - acc: 0.5138 - val_loss: 9.6709 - val_acc: 0.4000\n",
+            "Epoch 14/200\n",
+            "1500/1500 [==============================] - 177s 118ms/step - loss: 7.8441 - acc: 0.5133 - val_loss: 7.5218 - val_acc: 0.5333\n",
+            "Epoch 15/200\n",
+            "1500/1500 [==============================] - 177s 118ms/step - loss: 7.8191 - acc: 0.5149 - val_loss: 9.6709 - val_acc: 0.4000\n",
+            "Epoch 16/200\n",
+            "1500/1500 [==============================] - 176s 118ms/step - loss: 7.8191 - acc: 0.5149 - val_loss: 10.7454 - val_acc: 0.3333\n",
+            "Epoch 17/200\n",
+            "1500/1500 [==============================] - 176s 117ms/step - loss: 7.8298 - acc: 0.5142 - val_loss: 10.7454 - val_acc: 0.3333\n",
+            "Epoch 18/200\n",
+            "1500/1500 [==============================] - 176s 118ms/step - loss: 7.8012 - acc: 0.5160 - val_loss: 6.4472 - val_acc: 0.6000\n",
+            "Epoch 19/200\n",
+            " 942/1500 [=================>............] - ETA: 1:05 - loss: 7.8537 - acc: 0.5127"
           ],
           "name": "stdout"
         }
