Colaboratory를 통해 생성됨

--- a/class_0_64_red.ipynb
+++ b/class_0_64_red.ipynb
@@ -61,22 +61,22 @@
         "    \n",
         "\n",
         "train_generator = train_datagen.flow_from_directory(\n",
-        "        '/gdrive/My Drive/Colab Notebooks/WNR/data_0_64_red_size/train',\n",
-        "        target_size=(64, 64),\n",
+        "        '/gdrive/My Drive/Colab Notebooks/WNR/data_0_21_size/train',\n",
+        "        target_size=(21, 21),\n",
         "        batch_size=3,\n",
         "        class_mode='categorical')\n",
         "\n",
         "test_datagen = ImageDataGenerator(rescale=1./255)\n",
         "\n",
         "test_generator = test_datagen.flow_from_directory(\n",
-        "        '/gdrive/My Drive/Colab Notebooks/WNR/data_0_64_red_size/test',\n",
-        "        target_size=(64, 64),    \n",
+        "        '/gdrive/My Drive/Colab Notebooks/WNR/data_0_21_size/test',\n",
+        "        target_size=(21, 21),    \n",
         "        batch_size=3,\n",
         "       class_mode='categorical')\n",
         "real_test_datagen = ImageDataGenerator(rescale=1./255)\n",
         "real_test_generator = real_test_datagen.flow_from_directory(\n",
-        "        '/gdrive/My Drive/Colab Notebooks/WNR/data_0_64_red_size/real_test',\n",
-        "        target_size=(64, 64),    \n",
+        "        '/gdrive/My Drive/Colab Notebooks/WNR/data_0_21_size/real_test',\n",
+        "        target_size=(21, 21),    \n",
         "        batch_size=3,\n",
         "       class_mode='categorical')\n",
         "\n",
@@ -84,12 +84,12 @@
         "model = Sequential()\n",
         "model.add(Conv2D(32, kernel_size=(3, 3),\n",
         "                 activation='relu',\n",
-        "                 input_shape=(21,21,3)))\n",
+        "                 input_shape=(64,64,3)))\n",
         "model.add(Conv2D(64, (3, 3), activation='relu'))\n",
         "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
         "model.add(Flatten())\n",
         "model.add(Dense(128, activation='relu'))\n",
-        "model.add(Dense(2, activation='softmax'))\n",
+        "model.add(Dense(1, activation='sigmoid'))\n",
         "\n",
         "# 3. 모델 학습과정 설정하기\n",
         "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
